--- a/client/src/index.css
+++ b/client/src/index.css
@@ -504,9 +504,9 @@ a:hover {
   margin-bottom: 1rem !important;
 }
 
-.mb-4 {
+/* .mb-4 {
   margin-bottom: 1.375rem !important;
-}
+} */
 
 .mb-5 {
   margin-bottom: 1.625rem !important;
