--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1807,7 +1807,7 @@ label form [type='radio'] {
 
 /* Position and sizing of burger button */
 .bm-burger-button {
-  position: fixed;
+  position: absolute;
   width: 36px;
   height: 30px;
   left: 36px;
@@ -1821,7 +1821,7 @@ label form [type='radio'] {
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #a90000;
+  background: #687864;
 }
 
 /* Position and sizing of clickable cross button */
