--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1840,7 +1840,7 @@ Sidebar wrapper styles
 Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
 */
 .bm-menu-wrap {
-  position: fixed;
+  position: absolute;
   height: 100%;
 }
 
@@ -1870,4 +1870,5 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Styling of overlay */
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
+  position: absolute;
 }
