--- a/client/src/index.css
+++ b/client/src/index.css
@@ -383,7 +383,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: .75rem;
 }
 
 h4 {
@@ -925,6 +925,7 @@ a:hover {
 
 .bg-info {
   background-color: #31708E !important;
+  max-width: 100%;
 }
 
 .bg-danger {
@@ -1168,7 +1169,7 @@ label form [type='radio'] {
 
 .container {
   width: 85%;
-  max-width: 1200px;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
