--- a/client/src/components/css/App.css
+++ b/client/src/components/css/App.css
@@ -392,8 +392,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #F5F5F5;
-  border-radius: 10px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar {
@@ -402,7 +401,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
+  background-color: transparent;
   background-image: -webkit-gradient(linear,
       left bottom,
       left top,
