adds style to login page

--- a/client/src/components/css/App.css
+++ b/client/src/components/css/App.css
@@ -243,7 +243,7 @@
       display:none;
 
     }
-    .signup-container {
+    .signup-container, .login-container {
       max-width: 95%;
     }
   }
@@ -255,7 +255,8 @@
   }
 
 
-  .signup-container {
+  .signup-container 
+   {
     position: absolute;
     margin-top: 15em;
     top: 50%;
@@ -269,18 +270,21 @@
     
   }
   
-  .signup-container h4 {
+  .signup-container 
+   h4 {
     margin: 0 0 30px;
     padding: 0;
     color: #f7f9fb;
     text-align: center;
   }
   
-  .signup-container .signup-box {
+  .signup-container 
+   .signup-box {
     position: relative;
   }
   
-  .signup-container .signup-box input {
+  .signup-container 
+   .signup-box input {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
@@ -291,7 +295,8 @@
     outline: none;
     background: transparent;
   }
-  .signup-container .signup-box label {
+  .signup-container 
+   .signup-box label {
     position: absolute;
     top:0;
     left: 0;
@@ -302,9 +307,12 @@
     transition: .5s;
   }
   
-  .signup-container .signup-box input:focus ~ label,
-  .signup-container .signup-box input:valid ~ label,
-  .signup-container .signup-box input:active ~ label {
+  .signup-container 
+   .signup-box input:focus ~ label,
+  .signup-container 
+   .signup-box input:valid ~ label,
+  .signup-container 
+   .signup-box input:active ~ label {
     top: -20px;
     left: 0;
     color: #f7f9fb;
@@ -313,7 +321,8 @@
 
 
   
-  .signup-container form button {
+  .signup-container 
+   form button {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -332,7 +341,8 @@
 
   
   
-  .signup-container button:hover {
+  .signup-container 
+   button:hover {
     background: #5085a5;
     color: #f7f9fb;
     border-radius: 5px;
@@ -342,11 +352,114 @@
                 0 0 100px #f7f9fb;
   }
   
-  .signup-container button span {
+  .login-container 
+   button span {
     position: absolute;
     display: block;
   }
   
+  .login-container 
+   {
+    position: absolute;
+    margin-top: 15em;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    padding: 40px;
+    transform: translate(-50%, -50%);
+    background: #8fc1e3;
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    
+  }
+  
+  .login-container 
+   h4 {
+    margin: 0 0 30px;
+    padding: 0;
+    color: #f7f9fb;
+    text-align: center;
+  }
+  
+  .login-container 
+   .login-box {
+    position: relative;
+  }
+  
+  .login-container 
+   .login-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #f7f9fb;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #f7f9fb;
+    outline: none;
+    background: transparent;
+  }
+  .login-container 
+   .login-box label {
+    position: absolute;
+    top:0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #f7f9fb;
+    pointer-events: none;
+    transition: .5s;
+  }
+  
+  .login-container 
+   .login-box input:focus ~ label,
+  .login-container 
+   .login-box input:valid ~ label,
+  .login-container 
+   .login-box input:active ~ label {
+    top: -20px;
+    left: 0;
+    color: #f7f9fb;
+    font-size: 12px;
+  }
+
+
+  
+  .login-container 
+   form button {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #f7f9fb;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px;
+    background-color: #31708e;
+    border-style: none;
+    width: 100%;
+  }
+
+  
+  
+  .login-container 
+   button:hover {
+    background: #5085a5;
+    color: #f7f9fb;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #f7f9fb,
+                0 0 25px #f7f9fb,
+                0 0 50px #f7f9fb,
+                0 0 100px #f7f9fb;
+  }
+  
+  .login-container 
+   button span {
+    position: absolute;
+    display: block;
+  }
  
   
   
