--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1806,12 +1806,12 @@ label form [type='radio'] {
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #373a47;
+  background: #f7f9fb;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #687864;
+  background: #8fc1e3;
 }
 
 /* Position and sizing of clickable cross button */
@@ -1836,14 +1836,14 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
+  background: #508575;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
 
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
-  fill: #373a47;
+  fill: #508575;
 }
 
 /* Wrapper for item list */
