--- a/client/src/components/css/App.css
+++ b/client/src/components/css/App.css
@@ -241,11 +241,11 @@ body {
   padding: 5em 0;
 }
 
-@media (min-width: 54em) {
+/* @media (min-width: 54em) {
   .post__content {
     padding: 0 1em;
   }
-}
+} */
 
 .post__time {
   display: inline-block;
